@@ -1,34 +1,28 @@
-magerr=function(x, y, xlo=FALSE, ylo=FALSE, xhi=xlo, yhi=ylo, corxy, log='', length=0.02, col='black',fill=FALSE,...){
+magerr=function(x, y, xlo, ylo, xhi=xlo, yhi=ylo, corxy, length=0.02, col='black',fill=FALSE,...){
 if(missing(corxy)){
-  xhi=x+abs(xhi)
-  xlo=x-abs(xlo)
-  yhi=y+abs(yhi)
-  ylo=y-abs(ylo)
-  if(log=='x'){
-  	sel=which(xlo<=0)
-  	xlo[sel]=1e-300
+  if(!missing(xlo)){xlodraw=x-abs(xlo);doxlo=TRUE}else{xlodraw=0;doxlo=FALSE}
+  if(!missing(xlo) | !missing(xhi)){xhidraw=x+abs(xhi);doxhi=TRUE}else{xhidraw=0;doxhi=FALSE}
+  if(!missing(ylo)){ylodraw=y-abs(ylo);doylo=TRUE}else{ylodraw=0;doylo=FALSE}
+  if(!missing(ylo) | !missing(yhi)){yhidraw=y+abs(yhi);doyhi=TRUE}else{yhidraw=0;doyhi=FALSE}
+  
+  if(doxlo & par()$xlog){
+  	sel=which(xlodraw<=0)
+  	xlodraw[sel]=1e-300
   }
-  if(log=='y'){
-  	sel=which(ylo<=0)
-  	ylo[sel]=1e-300
-  	}
-  if(log=='xy' | log=='yx'){
-  	sel=which(xlo<=0)
-  	xlo[sel]=1e-300
-  	sel=which(ylo<=0)
-  	ylo[sel]=1e-300
+  if(doylo & par()$ylog){
+  	sel=which(ylodraw<=0)
+  	ylodraw[sel]=1e-300
   }
-  	
-  	if(any(xlo != FALSE)){
-  	arrows(x,y,xhi,y,angle=90,length=length,col=col,...)
-  	arrows(x,y,xlo,y,angle=90,length=length,col=col,...)
-  	}
-  	if(any(ylo != FALSE)){
-  	arrows(x,y,x,yhi,angle=90,length=length,col=col,...)
-  	arrows(x,y,x,ylo,angle=90,length=length,col=col,...)
-  	}
+
+  if(doxlo & any(is.finite(xlodraw))){arrows(x,y,xlodraw,y,angle=90,length=length,col=col,...)}
+  if(doxhi & any(is.finite(xhidraw))){arrows(x,y,xhidraw,y,angle=90,length=length,col=col,...)}
+  if(doylo & any(is.finite(ylodraw))){arrows(x,y,x,ylodraw,angle=90,length=length,col=col,...)}
+  if(doyhi & any(is.finite(yhidraw))){arrows(x,y,x,yhidraw,angle=90,length=length,col=col,...)}
+  
 }else{
-  if(any(xlo==FALSE) | any(ylo==FALSE)){stop('For error ellipses all xlo and ylo values must have real positive values.')}
+  if(missing(xlo) | missing(ylo)){stop('For error ellipses xlo and ylo must be specified explicitly.')}
+  if(any(is.finite(xlo)==FALSE) | any(is.finite(ylo)==FALSE)){stop('For error ellipses all xlo and ylo values must have real values.')}
+  if(any(xlo<0) | any(ylo<0)){stop('For error ellipses all xlo and ylo values must have real values.')}
   if(any(xlo!=xhi) | any(ylo!=yhi)){stop('xlo/ylo must equal xhi/yhi (i.e. the errors must be symmetric)')}
   n = length(x)
   a = rep(0,n)
